# serverless-functions

./: README.md
.fluence/: env.yaml
first-function/hello-world/: README.md
first-function/hello-world/.fluence/: workers.yaml
first-function/hello-world/.fluence/aqua/: deals.aqua
first-function/hello-world/src/gateway/src/compiled-aqua/: main.js
portfolioFunction/: Cargo.toml  README.md  fluence.yaml
portfolioFunction/.fluence/: workers.yaml
portfolioFunction/.fluence/aqua/: deals.aqua  services.aqua
portfolioFunction/src/aqua/: main.aqua
portfolioFunction/src/gateway/src/compiled-aqua/: main.d.ts  main.js
portfolioFunction/src/services/portfolioService/: service.yaml
portfolioFunction/src/services/portfolioService/portfolioService/: Cargo.toml  module.yaml
portfolioFunction/src/services/portfolioService/portfolioService/src/: main.rs
portfolio_test/: Cargo.toml
portfolio_test/src/: main.rs
urlFunction/: Cargo.toml  README.md  fluence.yaml
urlFunction/.fluence/: workers.yaml
urlFunction/.fluence/aqua/: deals.aqua  services.aqua
urlFunction/src/aqua/: main.aqua
urlFunction/src/gateway/src/compiled-aqua/: main.js
urlFunction/src/services/urlService/: service.yaml
urlFunction/src/services/urlService/urlService/: Cargo.toml  module.yaml
urlFunction/src/services/urlService/urlService/src/: main.rs
