[package]
name = "portfolioService"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "portfolioService"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
ureq = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"





